# product-review-marker

./: .gitignore  README.md  justfile  pyproject.toml
data/: criterias.json  data.csv  data.example.csv  prompt.txt
src/: extractor.py  main.py  product.py  rater.py
